Firefox bug fixes
- Fixed searchbar animating on load
- Fixed settings not showing
- Fixed font hierarchy

--- a/src/styles/SCSS/style.scss
+++ b/src/styles/SCSS/style.scss
@@ -259,7 +259,6 @@
 
 			@supports not (backdrop-filter: none) {
 				opacity: 0.8;
-				transition: all 0.1s ease-in;
 			}
 
 			@include frostedGlass();
